--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "d3-color": "^1.4.0",
     "d3-scale": "^3.2.1",
     "lodash": "^4.17.15",
+    "node-sass": "^4.5.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
+    "styled-components": "^5.0.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
