--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "ag-grid-community": "^22.1.1",
-    "ag-grid-enterprise": "^22.1.1",
-    "ag-grid-react": "^22.1.1",
+    "@types/styled-components": "^4.4.2",
+    "ag-grid-community": "20.1.0",
+    "ag-grid-enterprise": "20.1.0",
+    "ag-grid-react": "20.1.1",
     "d3-array": "^2.4.0",
     "d3-color": "^1.4.0",
     "d3-scale": "^3.2.1",
